Fixed an issue with white space.

--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ header {
 
 .hero-text-box {
     position: absolute;
-    width: 1140px;
+    width: 50%;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
@@ -179,5 +179,11 @@ footer {
 @media screen and (max-width: 992px) {
   .card {
     padding-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 633px) {
+  .hero-text-box {
+    width: 80%;
   }
 }
